Added user registration
